Modify the packages name

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "HXSD/ding",
+    "name": "hxsd/ding",
     "description": "ding ding laravel package",
     "license": "MIT",
     "keywords": ["xiewh", "laravel", "ding", "ding ding"],
